--- a/advanced/index.html
+++ b/advanced/index.html
@@ -6,8 +6,13 @@
         <h1>Advanced</h1>
 </head>
 <body>
+        <button  id="autobtn">Auto</button>
+        <button id="bikebtn">Motorbike</button>
+        <button id="truckbtn">Truck</button>
+        <p id="result"></p>
         
-                <script src='persons.js'></script>
+                
         </div>
+        <script src='persons.js'></script>
 </body>
 </html>
